org_unpackaged/unpackaged/objects/BillRateResult__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Bill_Rate__c</fullName>
        <formula>Annual_Income__c + Annual_Expenses__c + Fed_Tax_Amount__c + State_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Expenses</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Income</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Associate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bill Rate Results</relationshipLabel>
        <relationshipName>Bill_Rate_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fed_Tax_Amount__c</fullName>
        <formula>Annual_Income__c * VALUE($Label.Federal_Tax_Rate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fed Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <formula>Annual_Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit_Annual_Billings__c</fullName>
        <formula>Profit_State_Tax_Amount__c + Profit_Fed_Tax_Amount__c + Profit_Annual_Income__c + Annual_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Annual Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit_Annual_Income__c</fullName>
        <formula>(1 + Profit_Margin__c) * Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit_Fed_Tax_Amount__c</fullName>
        <formula>Profit_Annual_Income__c * VALUE($Label.Federal_Tax_Rate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Fed Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit_Hourly_Rate__c</fullName>
        <formula>Profit_Annual_Billings__c / Annual_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit_Margin__c</fullName>
        <label>Profit Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profit_State_Tax_Amount__c</fullName>
        <formula>State_Tax_Rate__c * Profit_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit State Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospective_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospective Associate</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Bill Rate Results</relationshipLabel>
        <relationshipName>Bill_Rate_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Tax_Amount__c</fullName>
        <formula>Annual_Income__c * State_Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Tax_Rate__c</fullName>
        <label>State Tax Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Bill_Rate__c</fullName>
        <formula>/* ((0.11*( Annual_Expenses__c + Annual_Income__c ))+Annual_Expenses__c + Annual_Income__c)/ Annual_Hours__c 

((State_Tax_Rate__c * ( Annual_Expenses__c + Annual_Income__c )) + Annual_Expenses__c + Annual_Income__c) / Annual_Hours__c

*/

Annual_Bill_Rate__c / Annual_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bill Rate Result</label>
    <nameField>
        <displayFormat>BR-{000000}</displayFormat>
        <label>Bill Rate Result</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Rate Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>